--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 28
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 25
+        minSdkVersion 15
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -15,11 +14,48 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    flavorDimensions "dim"
+    productFlavors {
+        google {
+            versionNameSuffix = "-google"
+            dimension = "dim"
+        }
+        mapbox {
+            versionNameSuffix "-mapbox"
+            dimension = "dim"
+        }
+        googleAndMapbox {
+            versionNameSuffix "-googlemapbox"
+            dimension = "dim"
+        }
+    }
+    compileOptions {
+        targetCompatibility = 1.8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+
+    }
+    sourceSets {
+        googleAndMapbox {
+            java.srcDirs = ["src/google/java", "src/mapbox/java"]
+        }
+    }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.google.android.gms:play-services-maps:10.2.0'
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    googleImplementation 'com.google.android.gms:play-services-maps:15.0.1'
+    googleAndMapboxImplementation 'com.google.android.gms:play-services-maps:15.0.1'
+
+    mapboxImplementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.5.0'
+    mapboxImplementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v8:0.7.0'
+    googleAndMapboxImplementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.5.0'
+    googleAndMapboxImplementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v8:0.7.0'
+    // Unit testing dependencies
+    testImplementation 'junit:junit:4.12'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 }
