--- a/build.gradle
+++ b/build.gradle
@@ -46,13 +46,15 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
+    implementation "androidx.appcompat:appcompat:1.2.0"
+    // For loading and tinting drawables on older versions of the platform
+    implementation "androidx.appcompat:appcompat-resources:1.2.0"
+
     googleImplementation 'com.google.android.gms:play-services-maps:15.0.1'
     googleAndMapboxImplementation 'com.google.android.gms:play-services-maps:15.0.1'
 
-    mapboxImplementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.5.0'
-    mapboxImplementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v8:0.7.0'
+    mapboxImplementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.5.0'
+    mapboxImplementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v9:0.9.0'
     googleAndMapboxImplementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.5.0'
     googleAndMapboxImplementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v8:0.7.0'
     // Unit testing dependencies
